# NestedFlutterView

./: .gitignore  build.gradle  local.properties  publish.gradle  settings.gradle
android/: .gitignore  settings.gradle
android/app/: build.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
flutter/: README.md  pubspec.yaml
flutter/ios/Classes/: plugin.c
flutter/lib/: main.dart  test.dart
flutter/module/: pubspec.yaml
flutter/module/lib/: main.dart
flutter/module/test/: widget_test.dart
flutter/plugin/: ffigen.yaml  pubspec.yaml
flutter/plugin/android/: build.gradle
flutter/plugin/android/src/main/: AndroidManifest.xml
flutter/plugin/lib/: constants.dart  nested_channel.dart  nested_flutter_view.dart  nested_flutter_view_bindings_generated.dart
flutter/plugin/lib/ffi/: allocation.dart
flutter/plugin/src/: CMakeLists.txt  dart_caller.cc  dart_caller.h  jni_lifecycle.cc  jni_ref_cache.cc  jni_ref_cache.h  macros.h  main_looper.cc  main_looper.h  nested_flutter_view.cc  nested_flutter_view.cpp  nested_flutter_view.h  ref_cache.cc  ref_cache.h
flutter/src/: plugin.c
flutter/test/: widget_test.dart
gradle/wrapper/: gradle-wrapper.properties
plugin/: README.md
plugin/android/: build.gradle
plugin/android/src/main/: AndroidManifest.xml
plugin/example/: pubspec.yaml
plugin/example/android/app/: build.gradle
plugin/example/ios/Runner.xcodeproj/: project.pbxproj
plugin/example/lib/: main.dart
plugin/ios/: plugin.podspec
plugin/lib/: plugin.dart  plugin_bindings_generated.dart
plugin/src/: CMakeLists.txt
(+16 files in other folders)
